# wp-html-api-rs

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  build-and-run.sh  demo.js  demo.php  index.php
.cargo/: config.toml
.github/workflows/: benchmark.yml  build-test.yml  release.yml  rust.yml
browser-extension/: htmlapi-sw.js  manifest.json  popup.html  popup.js  service-worker.js  wp_html_api_wasm.js  wp_html_api_wasm_bg.js  wp_html_api_wasm_bg.wasm
crates/entities/: Cargo.toml
crates/entities/gen-entities/: Cargo.toml
crates/entities/gen-entities/src/: lib.rs
crates/entities/src/: lib.rs
crates/html-to-md/: Cargo.toml
crates/html-to-md/src/: lib.rs
crates/php-cruft/: Cargo.toml
crates/php-cruft/src/: lib.rs
crates/wp-html-api/: Cargo.toml
crates/wp-html-api-html5lib-tests/: Cargo.toml
crates/wp-html-api-html5lib-tests/gen-tests/: Cargo.toml
crates/wp-html-api-html5lib-tests/gen-tests/src/: lib.rs
crates/wp-html-api-html5lib-tests/src/: lib.rs
crates/wp-html-api-html5lib-tests/tests/: macro_test.rs
crates/wp-html-api-php-ext/: Cargo.toml
crates/wp-html-api-php-ext/src/: lib.rs
crates/wp-html-api-wasm/: Cargo.toml  index.js
crates/wp-html-api-wasm/benches/: index.bench.js  package-lock.json  package.json  vitest.config.ts
crates/wp-html-api-wasm/src/: lib.rs
crates/wp-html-api/benches/: process-html-standard.rs
crates/wp-html-api/src/: attributes.rs  compat_mode.rs  doctype.rs  html_api.rs  html_processor.rs  lib.rs  macros.rs  main.rs  php-wp-html-api.rs  str_fns.rs  tag_name.rs  tag_processor.rs
crates/wp-html-api/src/html_processor/: active_formatting_elements.rs  errors.rs  html_stack_event.rs  html_token.rs  insertion_mode.rs  processor_state.rs  stack_of_open_elements.rs
js-packages/html-to-md/: package-lock.json  package.json  tsconfig.json
js-packages/html-to-md/src/: html-to-markdown.ts  index.ts
