[workspace]
members = [
  "crates/*",
  "crates/wp-html-api-html5lib-tests/gen-tests",
  "crates/entities/gen-entities",
]
resolver = "2"

[workspace.package]
authors    = ["Jon Surrell <sirreal@users.noreply.github.com>"]
edition    = "2021"
license    = "GPL-2.0-or-later"

[workspace.dependencies]
memchr = "2.7.4"
