[workspace]
members = [
  "crates/*",
  "crates/wp-html-api-html5lib-tests/gen-tests",
  "crates/entities/gen-entities",
]
resolver = "3"

[workspace.package]
authors    = ["Jon Surrell <sirreal@users.noreply.github.com>"]
edition    = "2024"
license    = "GPL-2.0-or-later"

[workspace.dependencies]
memchr = "2.7.5"
