[package]
name = "wp-html-api-html5lib-tests"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
wp-html-api = { path = "../wp-html-api" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
