[package]
name = "wp-html-api"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]

[dependencies]
entities = { path = "../entities" }

[dev-dependencies]
divan = { version = "2.8.1", package = "codspeed-divan-compat" }
quickcheck = "1"
quickcheck_macros = "1"

[[bench]]
name = "process-html-standard"
harness = false
