[package]
name = "gen-entities"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.145"
syn = { version = "2.0", features = ["full"] }
