[package]
name = "wp-html-api-html5lib-tests-gen-tests"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
glob = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
